--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 .card {
-  min-width: 100px; /* Set a minimum width for the cards */
+  min-width: 100px;
   height: 100px;
   background-color: #000;
   color: #fff;
