--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,15 @@ button:hover {
   height: 100vh;
   width: 100vw;
 }
+
+#name-input {
+  font-size: 1em;
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  border: none;
+  background-color: #fff;
+  color: #000;
+  margin: 1em;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+}
